--- a/estilos.css
+++ b/estilos.css
@@ -123,20 +123,60 @@ table {
   border-spacing: 0;
 }
 
-#caja {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4rem;
-  width: 414px;
+body {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  background-color: aqua;
-  border: solid black 2px;
+  height: 100vh;
+  flex-direction: column;
 }
 
-p {
-  width: 20%;
-  background-color: bisque;
-  border: 1px solid red;
+.container {
+  height: 100%;
+  background-image: url(./images/bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header {
+  font-size: 2.5rem;
+  color: aliceblue;
+  margin-top: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titulo .titulo1,
+.titulo .titulo2 {
+  font-weight: 400;
+}
+
+h2 {
+  width: fit-content;
+  margin-top: 0.8rem;
+  font-size: 0.8rem;
+  color: rgb(189, 193, 197);
+  text-transform: uppercase;
+}
+
+.btn {
+  font-size: 0.8rem;
+  margin-bottom: 2rem;
+  background-color: green;
+  color: white;
+  border-radius: 25px;
+  padding: 0.8rem 6rem;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgb(98, 143, 98);
 }
