--- a/estilos.css
+++ b/estilos.css
@@ -141,6 +141,16 @@ body {
   align-items: center;
 }
 
+.search--container {
+  height: 45%;
+  background-image: url(./images/bg5.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
 header {
   font-size: 2.5rem;
   color: aliceblue;
@@ -179,4 +189,72 @@ h2 {
 
 .btn:hover {
   background-color: rgb(98, 143, 98);
+}
+
+svg {
+  fill: currentColor;
+  color: whitesmoke;
+  height: 20px;
+  width: 20px;
+  margin-left: 2rem;
+}
+
+.profile--pic {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 40px;
+  margin-right: 2rem;
+}
+
+.header--search {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+p {
+  color: whitesmoke;
+  margin-left: 2rem;
+}
+
+p.saludo {
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  font-size: 1.2rem;
+}
+
+p.search-text1 {
+  font-size: 2.5rem;
+  line-height: 0.9;
+}
+
+p.search-text2 {
+  font-size: 2.5rem;
+  color: rgb(228, 228, 96);
+}
+
+input {
+  margin-top: 1.5rem;
+  margin-left: 2rem;
+  width: 83%;
+  height: 2rem;
+  border-radius: 25px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.search--input {
+  position: relative;
+  width: 85%;
+}
+
+.svg--search {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 16px;
+  left: 16px;
+  fill: currentColor;
+  color: rgb(179, 173, 173);
 }
